styles/subscription.css
/* ... */
 
  .margin-custom{
      margin-top:50px;
  }

  /* new css added */
  @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css');
  @import url('https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700&display=swap');
  @import url('https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css');
  @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css');
  
  @font-face {
    font-family: 'Nine Tsuki';
    src: url('../assets/fonts/NineTsukiRegular.ttf') format('truetype'),
         url('../assets/fonts/NineTsuki.otf') format('opentype');
  }
  
  *{
      margin:0;
      padding:0;
      box-sizing: border-box;
      
  }
  ::-webkit-scrollbar {
    width: 0px;
  }
  .sub-heading{
    font-weight:750;
    font-size:33px;
    display:flex;
    justify-content:center;
    align-items:center;
    width:100%;
    margin-top:50px;
  }
  #tabContainer{
    display:flex;
    flex-direction:row;
    gap:20px;
    justify-content:center !important;
    align-items:center !important;
    margin:20px 20px 20px 0px;
    margin-bottom:40px !important;
  }

  .margin-trial{
    margin-top:10px!important;
  }
  .disabledTab{
    background-color: #212123;
    color:#959595;
    width: 140px !important;
    height:38px;
    border-radius:60px;
    display:flex;
    align-items: center;
    justify-content: center;
  }
  .disabledTab:hover {
    color: #959595;
    border:none!important;
    outline:none !important;
    box-shadow:none!important;
  }
  .disabledTab:focus{
    border:none!important;
    outline:none !important;
    box-shadow:none!important;
  }

 
  .activeTab{
    background: linear-gradient(to right, #A83AFE 0%, #6E59FE 100%);
    color:white;
    width: 140px !important;
    height:38px;
    border-radius:60px;
    display:flex;
    align-items: center;
    justify-content: center;
  }
  .activeTab:hover{
    color: white;
    border:none!important;
    outline:none !important;
    box-shadow:none!important;
  }
  
  .activeTab:focus{
    border:none!important;
    outline:none !important;
    box-shadow:none!important;
  }
  section{
      position:relative;
      width:100%;
      display:flex;
      flex-direction:column;
      justify-content:center;
      overflow:hidden;
      
  }

  #sub-swiper{
    width: 100%;
    height: 100%;
  }

  .hidden{
    visibility:hidden !important;
  }
  #sub-swiper-trial{
    width: 100%;
    height: 100%;
  }
  
  .discount{
      text-decoration: line-through;
       color:#959595;
       font-size:16px !important;
  }
  .marginTop-17{
    margin-top:-17px !important;
  }
  .swiper-slide {
    text-align: center;
    font-size: 16px;
     background:#212123;
      width:283.14px !important;
      
      border-radius:30px;
      padding:20px 0px;
      margin-top:50px !important;
      margin-bottom:50px !important;
      
  }
  .swiper-slide-monthly{
    height:585px !important;
  }
  .swiper-slide-trial {
     
      height:440px !important;
  
      
  }
  .swiper-slide-shadow-left,
  .swiper-slide-shadow-right {
    display: none;
  }

  /* tablet */
  @media(max-width:1025px){
    .labels{
        display:none;
      }
      .activeTab , .disabledTab{
        width:100px;
      }
      .tipBg{
        width:100% !important;
      }
      .mobile-tag{
        display:inline-block !important;
        max-width:fit-content!important;
        padding:5px;
        border-radius:5px;
        background:black;
        color:#959595;
      }
      .swiper-slide {
        font-size: 14px;
        padding:40px 0px !important;
          
      }
      .swiper-slide-monthly{
        height:836px!important;    
      }
      .swiper-slide-trial {
        height:640px !important;
    }
    .marginTopSoldOut{
        margin-top: -57px;
    }
    .marginTop-20 {
        margin-top: -57px !important;
    } 
    .marginTop-5 {
        margin-top: -15px ;
    }
   
  }

  /* mobile */
  @media(max-width:640px){
 
  .activeTab , .disabledTab{
    width:100px;
  }

  
  .labels{
    display:none;
  }
  .marginTop-17{
    margin-top:-38px !important;
  }


  .swiper-slide {
    font-size: 14px;
width:85vw !important;
    
  }

  .swiper-slide-monthly{
    height:836px;    
  }
  
  .swiper-slide-trial {
      height:640px !important;
  }

  .tipBg{
    width:100% !important;
  }
  .mobile-tag{
    display:inline-block !important;
    max-width:fit-content!important;
    padding:5px;
    border-radius:5px;
    background:black;
    color:#959595;
  }
  .marginTop-20 {
    margin-top: -60px !important;
}
.marginTopSoldOut {
    margin-top: -60px !important;
}
.marginTop-5 {
    margin-top: -2px ;
}

}


  .recommendedBorder{
    background-image: linear-gradient(90deg, #212123, #212123), linear-gradient(300.3deg, #0575E6 9.6%, #FF0CF5 92.85%) !important;
    background-clip: padding-box, border-box;
    background-origin: border-box;
    border: 2px solid transparent;
  }
  .swiper-slide-tab {
    text-align: center;
    font-size: 16px;
    display: flex;
    justify-content: center;
    align-items: center;
     background:#212123;
      width:283.14px !important;
      height:450px !important;
      border-radius:30px;
      padding:40px 25px 40px 25px;
  }
  /* @media (min-width: 768px) {
    .swiper-slide{
      width:257.4px !important;
      height:500px !important;
      font-size: 16px;
      padding:40px 25px 40px 25px;
    }
    .number{ 
      margin:8px !important;
    }
    .cross{
      height:10px;
      width:10px;
      }
  } */
  .swiper-pagination-bullets{
   display:none;
  }
  .sub-btn:hover{
    background:linear-gradient(300.3deg, #0575E6 9.6%, #FF0CF5 92.85%);
    border:none!important;
    outline:none !important;
    box-shadow:none!important;
  }
/* ... */

